# rpg_econ

./: .gitignore  README.md  pyproject.toml
econ_sim/actor/: __init__.py  actor.py
econ_sim/commodities/: __init__.py
econ_sim/market/: __init__.py  market.py
tests/: test_econ_sim.py
