[tool.poetry]
name = "econ_sim"
version = "0.1.0"
description = ""
authors = ["Sam Phinizy <nipper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
